fix font styles on mobile button svgs color fix click me to tap me on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@
 	font-size: 3.25rem;
 
 	@media (max-width: 550px) {
-		font-size: 2.75rem;
+		font-size: 2.65rem;
 	}
 }
 
